# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = bullet_control
version = 0.0.1
description = A set of continuous control tasks in pybullet.
author = Yicheng Luo
author-email = ethanluoyc@gmail.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/ethanluoyc/bullet_control
project-urls =
    Source = https://github.com/ethanluoyc/bullet_control
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
keywords = pybullet reinforcement-learning

[options]
zip_safe = False
packages = find:
include_package_data = True
# package_dir =
#     =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = 
    pybullet
    numpy
    dm_env
    dm_control
    absl-py
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.6

[options.packages.find]
where = .
exclude =
    tests
    examples

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install bullet_control[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov
    check-manifest
    coverage

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = bullet_control.module:function
# For example:
# console_scripts =
#     fibonacci = bullet_control.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov bullet_control --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 88
extend-ignore = E203, W503, E731
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py